--- a/three/report/intro.tex
+++ b/three/report/intro.tex
@@ -1,3 +1,3 @@
-This report contains the analysis of an implementation of multi-agent reinforcement learning. In this case, there can be multiple predators and there is one prey that needs to be caught. The predators all receive a positive reward of 10 if the prey is caught and the prey receives a negative reward of 10. However, if multiple predators bump into one another, they get confused and the prey gets away. In that case, the prey receives a positive reward of 10 and all predators receive a negative reward of 10. 
-
-In this case, all agents learn using model-free learning. Three different ways of model-free learning are used: independent Q-learning, minimax Q-learning and independent SARSA. Though the workings of these methods have been researched extensively in the past, the prey never learned. Now this is different, which makes the game more interesting. Also, it is interesting to see if and how the predators are going to work together in order to catch the prey. Therefore, this paper focuses on the effects of these methods, implemented on all agents. Also, the effects of different parameter settings (learning rate, discount factor and $\epsilon$) are researched.
+This report contains the analysis of different multi-agent reinforcement learning algorithms. \\
+The algorithms were tested in an $11\times11$ grid-world with one prey-agent and $n\in \{1,2,3,4\}$ predator-agents. The goal of the prey is to have the predators bump into each other, while the goal of the predators is to have one of them catch the prey. All agents learn, by receiving a reward of $10$ if their team wins, and a reward of $-10$ if their team loses. \\
+Three model-free learning algorithms were compared: Independent Q-learning, Independent Sarsa and Minimax-Q \cite{Littman94markovgames}. Contrary to earlier implementations, the problem at hand considers an intelligent prey, that learns alongside the predators. The effect of the different algorithms, with different parameter settings (learning rate $\alpha$, discount factor $\gamma$, explore-rate $\epsilon$), on different numbers of learning agents was analyzed and the results reported in this paper.
