--- a/three/report/bibliography.bib
+++ b/three/report/bibliography.bib
@@ -16,3 +16,10 @@
     publisher = {Morgan Kaufmann}
 }
 
+
+@inproceedings{wu2009function,
+  title={Function Approximation Using Tile and Kanerva Coding For Multi-Agent Systems},
+  author={Wu, Cheng and Meleis, Waleed},
+  booktitle={Proc. Of Adaptive Learning Agents Workshop (ALA) in AAMAS},
+  year={2009}
+}
