--- a/three/report/Assignment3_Group4.tex
+++ b/three/report/Assignment3_Group4.tex
@@ -140,7 +140,7 @@ This section discusses the results of the implementations. In order to display a
 \subsection{Minimax Q-learning}
 
 \subsection{Independent SARSA}
-\input{ind_sarsa_analysis}
+%\input{ind_sarsa_analysis}
 \pagebreak
 
 
