added sarsa theory and commented friend or foe out

--- a/three/report/Assignment3_Group4.tex
+++ b/three/report/Assignment3_Group4.tex
@@ -105,8 +105,10 @@ Let alpha := alpha * decay
 
 
 % Update which one is the `other leanring'
-\subsection{Friend-or-Foe}
-\input{friend_or_foe}
+%\subsection{Friend-or-Foe}
+%\input{friend_or_foe}
+\subsection{Independent SARSA}
+\input{sarsa}
 
 \section{Implementation}
 
