--- a/three/report/Assignment3_Group4.tex
+++ b/three/report/Assignment3_Group4.tex
@@ -135,7 +135,7 @@ The implementation consists of the following files:
 
 
 \section{Analysis}
-This section discusses the results of the implementations. In order to display and compare results, graphs are used. The title describes which parameters are analysed and the legend shows which color represents which setting of said parameters.
+This section discusses the results of the implementations. In order to display and compare results, graphs are used. The title describes which parameters are analysed and the legend shows which color represents which setting of said parameters. Contrary to previous reports, tests were run 5 times with 2000 episodes. Eventually, the results were averaged and used for analysis.
 
 \subsection{Independent Q-Learning}
 \input{ind_q_analysis}
@@ -147,7 +147,7 @@ This section discusses the results of the implementations. In order to display a
 
 
 \section{Conclusion}
-
+\input{conclusion}
 \pagebreak
 
 
